--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,11 @@
         "php": ">=5.4.0",
         "yiisoft/yii2": "~2.0.5",
         "yiisoft/yii2-bootstrap": "~2.0.0",
-        "yiisoft/yii2-swiftmailer": "~2.0.0"
+        "yiisoft/yii2-swiftmailer": "~2.0.0",
+        "kartik-v/yii2-widget-select2": "@dev",
+        "codeception/codeception": "^2.3",
+        "kartik-v/yii2-widgets": "^3.4",
+        "dmstr/yii2-adminlte-asset": "^2.4"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.0.0",
